--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_PORT: ${POSTGRES_PORT}
+    ports:
+      - "5432:5432"
     volumes:
       - ./dataDB:/var/lib/postgresql/data
   backend:
@@ -24,5 +26,6 @@ services:
       - "postgres"
     ports:
       - "${BACKEND_PORT}:8080"
+    restart: always
 #    stdin_open: true # docker run -i
 #    tty: true        # docker run -t
