--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "@tsconfig/recommended": "^1.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/node": "^20.6.3",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.49.0",
